# advent-of-code

./: README.md
csharp/: .editorconfig  AoC.sln  Directory.Build.props  Directory.Packages.props
csharp/src/AoC/: AoC.csproj  Solution.cs  SolutionRunner.cs  SolutionRunnerArguments.cs
csharp/src/AoC.Y2017/: AoC.Y2017.csproj  Program.cs
csharp/src/AoC.Y2017/Solutions/: D01P1.cs  D01P2.cs  D02P1.cs  D02P2.cs  D03P1.cs  D03P2.cs
csharp/src/AoC.Y2018/: AoC.Y2018.csproj  Program.cs
csharp/src/AoC.Y2018/Solutions/: D01P1.cs  D01P2.cs  D02P1.cs  D02P2.cs  D03P1.cs  D03P2.cs  D04P1.cs  D04P2.cs  D05P1.cs  D05P2.cs
csharp/src/AoC.Y2021/: AoC.Y2021.csproj
csharp/src/AoC.Y2021/Solutions/: D01P1.cs  D01P2.cs  D02P1.cs  D02P2.cs  D03P1.cs  D03P2.cs
csharp/src/AoC.Y2022/: AoC.Y2022.csproj
csharp/src/AoC.Y2022/Solutions/: D01P1.cs  D01P2.cs  D02P1.cs  D02P2.cs  D03P1.cs  D03P2.cs  D04P1.cs  D04P2.cs  D05P1.cs  D05P2.cs  D06P1.cs  D06P2.cs  D07P1.cs  D07P2.cs  D08P1.cs  D08P2.cs
csharp/src/AoC.Y2023/: AoC.Y2023.csproj
csharp/src/AoC.Y2023/Solutions/: D01P1.cs  D01P2.cs  D02P1.cs  D02P2.cs  D03P1.cs  D03P2.cs  D04P1.cs  D04P2.cs  D05P1.cs  D05P2.cs  D06P1.cs  D06P2.cs  D07P1.cs  D07P2.cs  D08P1.cs  D08P2.cs  D09P1.cs  D09P2.cs  D10P1.cs  D10P2.cs  D11P1.cs  D11P2.cs  D12P1.cs  D12P2.cs  D13P1.cs  D13P2.cs  D14P1.cs  D14P2.cs  D15P1.cs  D15P2.cs  D16P1.cs  D16P2.cs  D17P1.cs  D17P2.cs
csharp/src/AoC.Y2024/: AoC.Y2024.csproj
csharp/src/AoC.Y2024/Solutions/: D01P1.cs  D01P2.cs  D02P1.cs  D02P2.cs  D03P1.cs  (+9 more)
data/: .gitignore  .mise.toml  .rustfmt.toml  Cargo.toml
data/src/: main.rs
rust/: .editorconfig  .mise.toml  .rustfmt.toml  Cargo.toml  cargo.toml
rust/src/: main.rs
rust/src/aoc/: asserts.rs  errors.rs  mod.rs  problem.rs  solution.rs  solution_test.rs  test_aoc.rs
rust/src/aoc/traits/: into_result.rs  mod.rs  to_option_string.rs
rust/src/utils/: mod.rs  solution_context.rs
rust/src/years/: mod.rs
rust/src/years/y2015/: d01.rs  mod.rs
rust/src/years/y2023/: d01.rs  d01p1.rs  d01p2.rs  d02.rs  d02p1.rs  d02p2.rs  mod.rs
rust/src/years/y2025/: d01.rs  d01p1.rs  d01p2.rs  d02.rs  d02p1.rs  d02p2.rs  d03.rs  d03p1.rs  d03p2.rs  d04.rs  d04p1.rs  d04p2.rs  d05.rs  d05p1.rs  d05p2.rs  d06.rs  d06p1.rs  d06p2.rs  d07.rs  d07p1.rs  d07p2.rs  d08.rs  d08p1.rs  d08p2.rs  d09.rs  d09p1.rs  d09p2.rs  d10.rs  d10p1.rs  d10p2.rs  d11.rs  d11p1.rs  d11p2.rs  d12.rs  d12p1.rs  mod.rs
(+14 files in other folders)
