[package]
name = "aoc-data"
version = "0.1.0"
edition = "2024"
authors = ["Jonathon Leight <jonathon.leight@jleight.com>"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
snafu = "0.8.9"
toml = "0.9.8"
walkdir = "2.5.0"

[lints.rust]
future_incompatible = "warn"
keyword_idents = "warn"
let_underscore = "warn"
nonstandard_style = "warn"
refining_impl_trait = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused = "warn"

[lints.clippy]
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
nursery = "warn"
pedantic = "warn"
unneeded_field_pattern = "warn"
wildcard_enum_match_arm = "warn"
