[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2024"
authors = ["Jonathon Leight <jonathon.leight@jleight.com>"]

[dependencies]
itertools = "0.14.0"
regex = "1.12.2"
serde_json = "1.0.145"
snafu = "0.8.9"
z3 = { version = "0.19.6", features = ["gh-release"] }
zip = "6.0.0"

[lints.rust]
future_incompatible = "warn"
keyword_idents = "warn"
let_underscore = "warn"
nonstandard_style = "warn"
refining_impl_trait = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused = "warn"

[lints.clippy]
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
nursery = "warn"
pedantic = "warn"
unneeded_field_pattern = "warn"
wildcard_enum_match_arm = "warn"
